# sept11-datasets

./: .gitignore  Cargo.toml  README.md  generate-spreadsheet.py
.github/workflows/: release.yml
resources/: download-releases.sh  release-table
scripts/: generate-spreadsheet.py  list-archive-collection.py  search-for-files-in-releases.py  search-in-collection.py  summarise.py  verify-videos.py
src/: db.rs  error.rs  lib.rs  main.rs  release_data.rs
