[package]
name = "sept11-datasets"
version = "0.1.0"
edition = "2021"

[[bin]]
path="src/main.rs"
name="sept11-datasets"

[dependencies]
color-eyre = "0.6"
colored = "2.0.4"
clap = { version = "4.2.1", features = ["derive"] }
dirs-next = "2.0.0"
indicatif = "0.17.6"
lava_torrent = "0.11"
lazy_static = "~1.4"
prettytable-rs = "0.10.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
sha-1 = "0.9"
textwrap = "0.16.0"
thiserror = "1.0.23"
url = "2.4.1"
